--- a/pom.xml
+++ b/pom.xml
@@ -6,29 +6,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>jgridshift</groupId>
   <artifactId>jgridshift</artifactId>
-  <version>1.1</version>
-  <dependencies>
-    <dependency>
-      <groupId>javax</groupId>
-      <artifactId>javaee-api</artifactId>
-      <version>7.0</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.axis</groupId>
-      <artifactId>axis</artifactId>
-      <version>1.4</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
- 
+  <packaging>pom</packaging>
+  <version>1.2</version>
 
   <distributionManagement>
     <repository>
@@ -44,32 +23,13 @@
       <url>https://repo.boundlessgeo.com/snapshot/</url>
     </snapshotRepository>
   </distributionManagement>
-
-
+  
+  <modules>
+    <module>core</module>
+    <module>sample</module>
+  </modules>
 
   <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>default-jar</id>
-            <phase>package</phase>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <configuration>
-              <excludes>
-                <!-- Makes the jar conform to the original jgridshift 1.0 contents, maye want to split the project in submodules later -->
-                <exclude>au/com/objectix/jgridshift/sample/**</exclude>
-                <exclude>au/com/objectix/jgridshift/jca/**</exclude>
-              </excludes>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-
     <extensions>
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
