--- a/jca/pom.xml
+++ b/jca/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>jgridshift</artifactId>
     <version>1.3</version>
   </parent>
-  <artifactId>jgridshift-sample</artifactId>
+  <artifactId>jgridshift-jca</artifactId>
   <dependencies>
     <dependency>
       <groupId>jgridshift</groupId>
@@ -17,14 +17,9 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>jgridshift</groupId>
-      <artifactId>jgridshift-jca</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.axis</groupId>
-      <artifactId>axis</artifactId>
-      <version>1.4</version>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
     </dependency>
   </dependencies>
 </project>
