--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
   <groupId>jgridshift</groupId>
   <artifactId>jgridshift</artifactId>
   <packaging>pom</packaging>
-  <version>1.2</version>
+  <version>1.3</version>
+
+  <properties>
+    <maven.compiler.target>6</maven.compiler.target>
+    <maven.compiler.source>6</maven.compiler.source>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
   <distributionManagement>
     <repository>
@@ -23,9 +29,10 @@
       <url>https://repo.boundlessgeo.com/snapshot/</url>
     </snapshotRepository>
   </distributionManagement>
-  
+
   <modules>
     <module>core</module>
+    <module>jca</module>
     <module>sample</module>
   </modules>
 
