--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>jgridshift</groupId>
+    <groupId>it.geosolutions.jgridshift</groupId>
     <artifactId>jgridshift</artifactId>
     <version>1.3</version>
   </parent>
