--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>jgridshift</groupId>
+  <groupId>it.geosolutions.jgridshift</groupId>
   <artifactId>jgridshift</artifactId>
   <packaging>pom</packaging>
   <version>1.3</version>
