--- a/jca/pom.xml
+++ b/jca/pom.xml
@@ -5,14 +5,14 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>it.geosolutions.jgridshift</groupId>
+    <groupId>io.oss84.jgridshift</groupId>
     <artifactId>jgridshift</artifactId>
     <version>1.3</version>
   </parent>
   <artifactId>jgridshift-jca</artifactId>
   <dependencies>
     <dependency>
-      <groupId>it.geosolutions.jgridshift</groupId>
+      <groupId>io.oss84.jgridshift</groupId>
       <artifactId>jgridshift-core</artifactId>
       <version>${project.version}</version>
     </dependency>
